<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:gravity="center"
      android:padding="20dp"
      android:text="@string/Reg_Form"
      android:textSize="30sp"
      android:textStyle="bold"


      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"

        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_margin="10dp"
        android:text="@string/name"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_name"
        android:inputType="text"


        />


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >
    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/mother"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/M_name"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editTextMother"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_M"
        android:inputType="text"


        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >


    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/father"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:inputType="text"
        android:text="@string/F_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextFather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_F"


        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/ph_no"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_no"
        android:inputType="phone" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/dob"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextBirth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_dob"
        android:inputType="date" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/gender"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editTextGender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_gender"
        android:inputType="textNoSuggestions" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/Add"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_add"
        android:inputType="textPostalAddress" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/work"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/editTextWork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_work"
        android:inputType="textNoSuggestions" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/cast"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_cast"
        android:inputType="textNoSuggestions" />

  </LinearLayout>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/submit"
        android:textSize="30sp" />

  </LinearLayout>



</LinearLayout>


